Stuck on email login with school email

--- a/Job Rejection Data Collection.ipynb
+++ b/Job Rejection Data Collection.ipynb
@@ -5,12 +5,13 @@
    "metadata": {},
    "source": [
     "# Job Rejection Data Collection\n",
-    "My aim is to explore and find meaningful insights in job rejection emails. However, in order to do this we first need to collect the data. In order to do this, I am going to use several Python packages that specialize in scraping directly from gmail."
+    "My aim is to explore and find meaningful insights in job rejection emails. However, in order to do this we first need to collect the data. In order to do this, I am going to use several Python packages that specialize in scraping directly from gmail. Here's some resources that were helpful:\n",
+    "* https://gist.github.com/jasonrdsouza/1674794"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -21,9 +22,59 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from myinfo import USER, PASS\n",
     "import email, getpass, imaplib, os, re\n",
+    "\n",
     "%matplotlib inline\n",
     "sns.set_style('whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your GMail username:cdewey96@vt.edu\n",
+      "Enter your password: ········\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Login to gmail\n",
+    "detach_dir = '.'\n",
+    "user = input(\"Enter your GMail username:\")\n",
+    "pwd = getpass.getpass(\"Enter your password: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "b'[AUTHENTICATIONFAILED] Invalid credentials (Failure)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-b61934f3153b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Connect to gmail imap sever\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimaplib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIMAP4_SSL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"imap.gmail.com\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpwd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#m.select(\"All Mail\") # here you a can choose a mail box like INBOX instead\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# use m.list() to get all the mailboxes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/imaplib.py\u001b[0m in \u001b[0;36mlogin\u001b[0;34m(self, user, password)\u001b[0m\n\u001b[1;32m    591\u001b[0m         \u001b[0mtyp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_simple_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'LOGIN'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_quote\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    592\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtyp\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'OK'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 593\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    594\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'AUTH'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    595\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtyp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: b'[AUTHENTICATIONFAILED] Invalid credentials (Failure)'"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to gmail imap sever\n",
+    "m = imaplib.IMAP4_SSL(\"imap.gmail.com\")\n",
+    "m.login(user, pwd)\n",
+    "#m.select(\"All Mail\") # here you a can choose a mail box like INBOX instead\n",
+    "# use m.list() to get all the mailboxes\n",
+    "m.list()"
    ]
   },
   {
@@ -34,9 +85,48 @@
    },
    "outputs": [],
    "source": [
-    "# Set variables\n",
-    "user = raw_input('')\n",
-    "pwd = getpass.getpass(\"Enter your password --> \")"
+    "# connecting to the gmail imap server\n",
+    "m = imaplib.IMAP4_SSL(\"imap.gmail.com\")\n",
+    "m.login(user,pwd)\n",
+    "m.select(\"cs2043\") # here you a can choose a mail box like INBOX instead\n",
+    "# use m.list() to get all the mailboxes\n",
+    "\n",
+    "resp, items = m.search(None, \"ALL\") # you could filter using the IMAP rules here (check http://www.example-code.com/csharp/imap-search-critera.asp)\n",
+    "items = items[0].split() # getting the mails id\n",
+    "\n",
+    "for emailid in items:\n",
+    "    resp, data = m.fetch(emailid, \"(RFC822)\") # fetching the mail, \"`(RFC822)`\" means \"get the whole stuff\", but you can ask for headers only, etc\n",
+    "    email_body = data[0][1] # getting the mail content\n",
+    "    mail = email.message_from_string(email_body) # parsing the mail content to get a mail object\n",
+    "\n",
+    "    #Check if any attachments at all\n",
+    "    if mail.get_content_maintype() != 'multipart':\n",
+    "        continue\n",
+    "\n",
+    "    print \"[\"+mail[\"From\"]+\"] :\" + mail[\"Subject\"]\n",
+    "\n",
+    "    # we use walk to create a generator so we can iterate on the parts and forget about the recursive headach\n",
+    "    for part in mail.walk():\n",
+    "        # multipart are just containers, so we skip them\n",
+    "        if part.get_content_maintype() == 'multipart':\n",
+    "            continue\n",
+    "\n",
+    "        # is this part an attachment ?\n",
+    "        if part.get('Content-Disposition') is None:\n",
+    "            continue\n",
+    "\n",
+    "        #filename = part.get_filename()\n",
+    "\n",
+    "        filename = mail[\"From\"] + \"_hw1answer\"\n",
+    "        \n",
+    "        att_path = os.path.join(detach_dir, filename)\n",
+    "\n",
+    "        #Check if its already there\n",
+    "        if not os.path.isfile(att_path) :\n",
+    "            # finally write the stuff\n",
+    "            fp = open(att_path, 'wb')\n",
+    "            fp.write(part.get_payload(decode=True))\n",
+    "            fp.close()"
    ]
   }
  ],
